syntax = "proto3";

package iap.pb;
option go_package = "iap/api;pb";

import "google/api/annotations.proto";
import "iap/api/message.proto";

service IAPPublic {
  rpc CheckIAPToken (IAPRequest) returns (IAPResponse) {
    option (google.api.http) = {
      post: "/v1/iap/check"
      body: "*"
    };
  };
  rpc ConsumeCallBack (IAPRequest) returns (IAPResponse) {
    option (google.api.http) = {
      post: "/v1/iap/callBack"
      body: "*"
    };
  };
}